Prevention of parent child margin collapse.

--- a/dynamic_web_application_projects/rails/book_trading_club/app/assets/stylesheets/module.typography.scss
+++ b/dynamic_web_application_projects/rails/book_trading_club/app/assets/stylesheets/module.typography.scss
@@ -3,4 +3,5 @@
 .header {
   background: $scheme-dark-background;
   color: $scheme-dark-foreground;
+  overflow: auto;  // otherwise h1 margin sets an empty band along the top of the browser
 }
